练习vim快捷键行首行尾移动和插入、剪切复制粘贴快捷键

--- a/快捷键.md
+++ b/快捷键.md
@@ -1,4 +1,4 @@
-## 第一天
+## 第一天       
 vim快捷键：
 1. i：insert模式，光标在前边
 2. a：insert模式，光标在后边
@@ -26,3 +26,34 @@ Tips:
 const aaaaaaaaaaaaaaa = 1111111111111111
 const bbbbbbbbbbbbbbb = 22222222222222222
 ```
+
+## 第二天
+vim快捷键：
+1. 行首行尾移动：
+- 移动到行首
+    H (vim.normalModeKeyBings中配置)、原配置：^
+    0 (包含了blank字符位置: 空格、tab、换行、回车等)
+- 移动到行尾
+    L (vim.normalModeKeyBings中配置)、原配置：g_     
+    $ (包含了blank字符位置: 空格、tab、换行、回车等)  
+
+2. 行首行尾插入：    
+- 插入到行首
+    I
+- 插入到行尾
+    A
+- 插入行前
+    O(大写o)
+- 插入行后
+    o(小写o)
+   
+3. 复制当前行
+    yy
+
+4. 剪切当前行
+    dd
+
+5. 粘贴
+    p
+
+
